<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Binary Converter</string>
    <string name="action_settings">Settings</string>
    <string name="input_prompt">Enter value</string>
    <string name="input_system_prompt">Choose system to convert from</string>
    <string name="result_system_prompt">Choose system to convert to</string>
    <string name="convert_from_text">Convert from</string>
    <string name="convert_to_text">Convert to</string>
    <string name="unsigned_radio_text">Unsigned</string>
    <string name="signed_radio_text">Signed</string>
    <string name="convert_button_text">Convert</string>
    <string name="signed_info_text">Signed numbers are represented using two\'s complement.</string>
    <string name="result_text">Result:</string>
    <string name="copy_button_text">Copy result</string>
    <string name="clear_button_text">Clear</string>
    <string name="swap_button_text">Swap</string>
    <string name="radix_prompt">Base</string>

    <string-array name="system_strings">
        <item>Binary</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
        <item>Other system</item>
    </string-array>

</resources>
