<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_prompt"
            android:singleLine="true"
            android:inputType="textNoSuggestions|textVisiblePassword" />

        <TextView
            android:id="@+id/convert_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/convert_from_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/input_system_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/system_strings"
                android:prompt="@string/input_system_prompt"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/input_radix_text"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:hint="@string/radix_prompt" />

        </LinearLayout>

        <TextView
            android:id="@+id/convert_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/convert_to_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/result_system_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/system_strings"
                android:prompt="@string/result_system_prompt"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/result_radix_text"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:hint="@string/radix_prompt" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swap_button_text"
            android:id="@+id/swap_button"
            android:layout_gravity="center_horizontal"
            android:onClick="swapSystems" />

        <RadioGroup
            android:id="@+id/signed_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/unsigned_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/unsigned_radio_text" />

            <RadioButton
                android:id="@+id/signed_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_radio_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/signed_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/signed_info_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/convert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="convertValue"
                android:text="@string/convert_button_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button_text"
                android:id="@+id/clear_button"
                android:onClick="clearValues" />
        </LinearLayout>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result_string_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="copyResult"
            android:text="@string/copy_button_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:enabled="false" />

    </LinearLayout>

</ScrollView>
